--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Tribute Page</title>
 </head>
 <body>
 
 <div id="main">
-	
+	<h1 id="title">
+		Lorem Ipsum
+	</h1>
+	<div id="img-div">
+		<img src="">
+		<div id="img-caption">
+			Lorem Ipsum
+		</div>
+	</div>
+	<p id="tribute-info">
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis <a id="tribute-link" target="_blank">aute irure</a> dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	</p>
 </div>
 
 </body>
