Finalize CSS template & add pic

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 		Lorem Ipsum
 	</h1>
 	<div id="img-div">
-		<img id="image" src="">
+		<img id="image" src="https://m.media-amazon.com/images/M/MV5BYWE5NTE0NjEtMjA3My00MzdjLWEzOGItMmI1NjU0MzcwZDY5XkEyXkFqcGdeQXVyMjU0MjE5OTY@._V1_.jpg">
 		<div id="img-caption">
-			Lorem Ipsum
+			It was only a tribute
 		</div>
 	</div>
 	<p id="tribute-info">
