Begin phase 1 customization

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Tribute Page</title>
+	<title>Only A Tribute</title>
 </head>
 <body>
 
@@ -10,13 +10,13 @@
 		Lorem Ipsum
 	</h1>
 	<div id="img-div">
-		<img id="image" src="https://m.media-amazon.com/images/M/MV5BYWE5NTE0NjEtMjA3My00MzdjLWEzOGItMmI1NjU0MzcwZDY5XkEyXkFqcGdeQXVyMjU0MjE5OTY@._V1_.jpg">
+		<img id="image" alt="Tenacious D" src="https://m.media-amazon.com/images/M/MV5BYWE5NTE0NjEtMjA3My00MzdjLWEzOGItMmI1NjU0MzcwZDY5XkEyXkFqcGdeQXVyMjU0MjE5OTY@._V1_.jpg">
 		<div id="img-caption">
-			It was only a tribute
+			The greatest picture in the world
 		</div>
 	</div>
 	<p id="tribute-info">
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis <a href="" id="tribute-link" target="_blank">aute irure</a> dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis <a href="https://www.youtube.com/watch?v=_lK4cX5xGiQ" id="tribute-link" target="_blank">greatest link in the world</a> dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 	</p>
 </div>
 
