--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		<img id="image" alt="Tenacious D" src="https://m.media-amazon.com/images/M/MV5BYWE5NTE0NjEtMjA3My00MzdjLWEzOGItMmI1NjU0MzcwZDY5XkEyXkFqcGdeQXVyMjU0MjE5OTY@._V1_.jpg">
 		<figcaption id="img-caption">
 			The greatest picture in the world
-		</figcaption>>
-	</figure>>
+		</figcaption>
+	</figure>
 	<p id="tribute-info">
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis <a href="https://www.youtube.com/watch?v=_lK4cX5xGiQ" id="tribute-link" target="_blank">greatest link in the world</a> dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 	</p>
